--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,37 @@
-.indexy {
-	font-family: gamora;
+*{margin: 0; padding: 0; border: 0; font-size: 100%;}
+.my-class {
+	font-family: 'Indie Flower', cursive;
+	color: #ea7186;
+	text-align: center;
+	border-bottom: 2px dotted #7a77b9;
+	padding: 0.5em;
+	font-size: 20px;
+}
+.first {
+	text-align: center;
+	font-family: garamond;
+	color: #7a77b9;
+	font-size: 20px;
+}
+.flower {
+	font-family: garamond;
+	color: #ea7186;
+	text-align: center;
+	font-size: 20px;
+	margin-left: 200px;
+	margin-right: 200px;
+}
+.jumbotron {
+	font-family: 'Indie Flower', cursive;
+	color: #ea7186;
+	padding: 0.5em;
+	font-size: 20px
+}
+.end {
+	text-align: right;
+	font-family: garamond;
+	color: #7a77b9;
+	margin-left: 200px;
+	margin-right: 200px;
+	font-size: 20px;
 }
