--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,25 @@
 *{margin: 0; padding: 0; border: 0; font-size: 100%;}
-.my-class {
-	font-family: 'Indie Flower', cursive;
+.title {
+	font-family: garamond;
 	color: #ea7186;
 	text-align: center;
 	border-bottom: 2px dotted #7a77b9;
 	padding: 0.5em;
 	font-size: 20px;
 }
-.first {
+.subtext {
+	font-family: 'Indie Flower', cursive;
+	color: #ea7186;
 	text-align: center;
+	border-bottom: 2px dotted #7a77b9;
+	padding: 0.5em;
+	font-size: 5px;
+}
+.first {
+	text-align: left;
 	font-family: garamond;
 	color: #7a77b9;
-	font-size: 20px;
+	font-size: 15px;
 }
 .flower {
 	font-family: garamond;
