--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,38 @@
 *{margin: 0; padding: 0; border: 0; font-size: 100%;}
 .title {
-	font-family: garamond;
-	color: #ea7186;
+	font-family: ABeeZee;
 	text-align: center;
 	border-bottom: 2px dotted #7a77b9;
 	padding: 0.5em;
 	font-size: 20px;
 }
 .subtext {
-	font-family: 'Indie Flower', cursive;
-	color: #ea7186;
+	font-family: comfortaa;
 	text-align: center;
 	border-bottom: 2px dotted #7a77b9;
 	padding: 0.5em;
-	font-size: 5px;
+	font-size: 15px;
 }
 .first {
 	text-align: left;
-	font-family: garamond;
-	color: #7a77b9;
+	font-family: comfortaa;
 	font-size: 15px;
 }
 .flower {
-	font-family: garamond;
-	color: #ea7186;
+	font-family: comfortaa;
 	text-align: center;
 	font-size: 20px;
 	margin-left: 200px;
 	margin-right: 200px;
 }
 .jumbotron {
-	font-family: 'Indie Flower', cursive;
-	color: #ea7186;
+	font-family: ABeeZee;
 	padding: 0.5em;
 	font-size: 20px
 }
 .end {
 	text-align: right;
-	font-family: garamond;
-	color: #7a77b9;
+	font-family: comfortaa;
 	margin-left: 200px;
 	margin-right: 200px;
 	font-size: 20px;
