--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 *{margin: 0; padding: 0; border: 0; font-size: 100%;}
 #background {
-	background-color: #ebe8e7;
+	background-color: #61c3be;
 }
 .title {
 	font-family: ABeeZee;
