--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 	background-color: #61c3be;
 }
 .title {
-	font-family: ABeeZee;
+	font-family: abeezee;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 30px;
@@ -20,15 +20,16 @@
 	font-family: comfortaa;
 	font-size: 20px;
 }
-.flower {
+.box {
 	font-family: comfortaa;
 	text-align: center;
+	background-color: white;
 	font-size: 20px;
-	margin-left: 200px;
-	margin-right: 200px;
+	margin-left: 345px;
+	margin-right: 345px;
 }
 .jumbotron {
-	font-family: ABeeZee;
+	font-family: abeezee;
 	padding: 0.5em;
 	font-size: 20px
 }
