--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 	background-color: #61c3be;
 }
 .title {
-	font-family: abeezee;
+	font-family: comfortaa;
+	font-weight: bolder;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 30px;
@@ -29,7 +30,8 @@
 	margin-right:350px;
 }
 .jumbotron {
-	font-family: abeezee;
+	font-family: comfortaa;
+	font-weight: bolder;
 	padding: 0.5em;
 	font-size: 20px
 }
