layout second page

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
 	padding: 0.5em;
 	font-size: 30px;
 }
+.colortitle {
+	font-family: comfortaa;
+	text-align: center;
+	color:#ff8302;
+	padding: 0.5em;
+	font-size: 30px;
+}
 .subtext {
 	font-family: comfortaa;
 	text-align: center;
