--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,9 @@ h5 {
 .jumbotron {
 	font-family: comfortaa;
 	padding: 0.5em;
-	font-size: 30px
+	font-size: 30px;
+	margin-left:150px;
+	margin-right:150px;
 }
 .end {
 	text-align: right;
