--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,7 @@ h5 {
 	font-family: comfortaa;
 	padding: 0.5em;
 	font-size: 30px;
-	margin-left:150px;
-	margin-right:150px;
+	text-align: center;
 }
 .end {
 	text-align: right;
