--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,7 @@
 	font-family: comfortaa;
 	text-align: center;
 	padding: 0.5em;
-	font-size: 25px;
-}
-.container {
-	border-style:dotted!important; 
-	border-color: #f8b21e!important;
-	margin-left: 10px!important;
-	margin-right: 10px!important;
+	font-size: 15px;
 }
 h3 {
 	font-family: comfortaa;
@@ -53,7 +47,7 @@ h5 {
 	font-size: 15px;
 }
 .first {
-	text-align: left;
+	text-align: center;
 	font-family: comfortaa;
 	font-size: 20px;
 }
@@ -70,8 +64,8 @@ h5 {
 	padding: 0.5em;
 	font-size: 30px;
 	text-align: center;
-	margin-left:150px;
-	margin-right:150px;
+	margin-left:100px;
+	margin-right:100px;
 }
 .end {
 	text-align: right;
@@ -83,6 +77,9 @@ h5 {
 .navbar {
 	background-color: #ff8302; 
 	width: 100%;
+	font-family: comfortaa;
+	font-size: 10px!important;
+	color: black;
 }
 .btn {
 	font-family: comfortaa;
@@ -91,6 +88,20 @@ h5 {
 	font-size: 20px;
 	color: white!important;
 	border-color:#61c3be!important; 
+}
+.my-container {
+	font-family: gomfortaa;
+	color: black;
+	text-align: center;
+	font-size: 20px;
+	background-color: white;
+	border: 5px solid #ff8302;
+	margin-left:150px;
+	margin-right:150px;
+	border-radius: 25px;
+	padding: 20px;
+	width: 1250px;
+	height: 300px;
 }
 
 @media screen and (max-width: 1400px) {
@@ -111,7 +122,7 @@ h5 {
 		font-family: comfortaa;
 		text-align: center;
 		padding: 0.5em;
-		font-size: 20px;
+		font-size: 10px;
 	}
 	.container  {
 		border-style:solid; 
@@ -164,6 +175,8 @@ h5 {
 		padding: 0.5em;
 		font-size: 25px;
 		text-align: center;
+		margin-left: 20px;
+		margin-right: 20px;
 	}
 	.end {
 		text-align: right;
@@ -174,6 +187,9 @@ h5 {
 	.navbar {
 		background-color: #ff8302; 
 		width: 100%;
+		font-family: comfortaa;
+		font-size: 10px!important;
+		color: black;
 	}
 	.btn {
 		font-family: comfortaa;
@@ -183,6 +199,20 @@ h5 {
 		color: white!important;
 		border-color:#61c3be!important; 
 	}
+	.my-container {
+	font-family: comfortaa;
+	color: black;
+	text-align: center;
+	font-size: 20px;
+	background-color: white;
+	border: 5px solid #ff8302;
+	margin-left: 20px;
+	margin-right: 20px;
+	border-radius: 25px;
+	width: auto;
+	padding: 20px;
+	height: 300px;
+}
 }
 #background {
 	background-color: #61c3be;
