--- a/css/style.css
+++ b/css/style.css
@@ -78,9 +78,11 @@ h5 {
 	background-color: #ff8302; 
 	width: 100%;
 	font-family: comfortaa;
-	font-size: 10px!important;
 	color: black;
 }
+.nav-link {
+		font-size: 20px!important;		
+	}
 .btn {
 	font-family: comfortaa;
 	text-align: center;
@@ -100,8 +102,8 @@ h5 {
 	margin-right:150px;
 	border-radius: 25px;
 	padding: 20px;
-	width: 1250px;
-	height: 300px;
+	width: auto;
+	height: auto;
 }
 
 @media screen and (max-width: 1400px) {
@@ -188,8 +190,10 @@ h5 {
 		background-color: #ff8302; 
 		width: 100%;
 		font-family: comfortaa;
-		font-size: 10px!important;
 		color: black;
+	}
+	.nav-link {
+		font-size: 20px!important;		
 	}
 	.btn {
 		font-family: comfortaa;
@@ -200,19 +204,19 @@ h5 {
 		border-color:#61c3be!important; 
 	}
 	.my-container {
-	font-family: comfortaa;
-	color: black;
-	text-align: center;
-	font-size: 20px;
-	background-color: white;
-	border: 5px solid #ff8302;
-	margin-left: 20px;
-	margin-right: 20px;
-	border-radius: 25px;
-	width: auto;
-	padding: 20px;
-	height: 300px;
-}
+		font-family: comfortaa;
+		color: black;
+		text-align: center;
+		font-size: 20px;
+		background-color: white;
+		border: 5px solid #ff8302;
+		margin-left: 20px;
+		margin-right: 20px;
+		border-radius: 25px;
+		width: auto;
+		padding: 20px;
+		height: auto;
+	}
 }
 #background {
 	background-color: #61c3be;
