--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,16 @@ h3 {
 	font-size: 20px;
 }
 h4 {
-	float: left;
+	float: center;
 	font-family: comfortaa;
-	text-align: left;
+	text-align: center;
 	padding: 0.5em;
 	font-size: 10px;
 }
 h5 {
-	float: right;
+	float: center;
 	font-family: comfortaa;
-	text-align: left;
+	text-align: center;
 	padding: 0.5em;
 	font-size: 10px;
 }
