--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,11 @@
 .colortitle {
 	font-family: comfortaa;
 	text-align: center;
+	float: center;
 	color:#ff8302;
 	padding: 0.5em;
-	font-size: 30px;
+	font-size: 45px;
+	margin-top: 100px;
 }
 .subtext {
 	font-family: comfortaa;
@@ -118,7 +120,7 @@ h5 {
 		text-align: center;
 		color:#ff8302;
 		padding: 0.5em;
-		font-size: 30px;
+		font-size: 20px;
 	}
 	.subtext {
 		font-family: comfortaa;
