--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,9 @@ h5 {
 		font-size: 10px;
 	}
 	h5 {
-		float: right;
+		float: center;
 		font-family: comfortaa;
-		text-align: left;
+		text-align: center;
 		padding: 0.5em;
 		font-size: 10px;
 	}
