--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 *{margin: 0; padding: 0; border: 0; font-size: 100%;}
 
 .title {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 30px;
 }
 .colortitle {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	float: center;
 	color:#ff8302;
@@ -17,44 +17,44 @@
 	margin-top: 100px;
 }
 .subtext {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	padding: 0.5em;
-	font-size: 15px;
+	font-size: 25px;
 }
 h3 {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 20px;
 }
 h4 {
 	float: center;
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 10px;
 }
 h5 {
 	float: center;
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 10px;
 }
 .endtext {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	padding: 0.5em;
 	font-size: 15px;
 }
 .first {
 	text-align: center;
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	font-size: 20px;
 }
 .box {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	background-color: white;
 	font-size: 20px;
@@ -62,7 +62,7 @@ h5 {
 	margin-right:150px;
 }
 .jumbotron {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	padding: 0.5em;
 	font-size: 30px;
 	text-align: center;
@@ -71,7 +71,7 @@ h5 {
 }
 .end {
 	text-align: right;
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	margin-left: 150px;
 	margin-right: 150px;
 	font-size: 20px;
@@ -79,14 +79,14 @@ h5 {
 .navbar {
 	background-color: #ff8302; 
 	width: 100%;
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	color: black;
 }
 .nav-link {
 		font-size: 20px!important;		
 	}
 .btn {
-	font-family: comfortaa;
+	font-family: 'Comfortaa', cursive;
 	text-align: center;
 	background-color: #88e2ca!important;
 	font-size: 20px;
@@ -94,7 +94,7 @@ h5 {
 	border-color:#61c3be!important; 
 }
 .my-container {
-	font-family: gomfortaa;
+	font-family: 'Comfortaa', cursive;
 	color: black;
 	text-align: center;
 	font-size: 20px;
@@ -110,20 +110,20 @@ h5 {
 
 @media screen and (max-width: 1400px) {
 	.title {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		padding: 0.5em;
 		font-size: 25px;
 	}
 	.colortitle {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		color:#ff8302;
 		padding: 0.5em;
 		font-size: 20px;
 	}
 	.subtext {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		padding: 0.5em;
 		font-size: 10px;
@@ -136,38 +136,38 @@ h5 {
 
 	}
 	h3 {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		padding: 0.5em;
 		font-size: 15px;
 	}
 	h4 {
 		float: left;
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: left;
 		padding: 0.5em;
 		font-size: 10px;
 	}
 	h5 {
 		float: center;
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		padding: 0.5em;
 		font-size: 10px;
 	}
 		.endtext {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		padding: 0.5em;
 		font-size: 10px;
 	}
 	.first {
 		text-align: left;
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		font-size: 15px;
 	}
 	.box {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		background-color: white;
 		font-size: 15px;
@@ -175,7 +175,7 @@ h5 {
 		margin-right: 20px;
 	}
 	.jumbotron {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		padding: 0.5em;
 		font-size: 25px;
 		text-align: center;
@@ -184,21 +184,21 @@ h5 {
 	}
 	.end {
 		text-align: right;
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		margin-left: 20px;
 		margin-right: 20px;
 	}
 	.navbar {
 		background-color: #ff8302; 
 		width: 100%;
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		color: black;
 	}
 	.nav-link {
 		font-size: 20px!important;		
 	}
 	.btn {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		text-align: center;
 		background-color: #88e2ca!important;
 		font-size: 20px;
@@ -206,7 +206,7 @@ h5 {
 		border-color:#61c3be!important; 
 	}
 	.my-container {
-		font-family: comfortaa;
+		font-family: 'Comfortaa', cursive;
 		color: black;
 		text-align: center;
 		font-size: 20px;
