--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ h5 {
 	color:black!important;
 }	
 .btn {
-	font-family: 'Comfortaa', cursive;
+	font-family: 'Averia Serif Libre', cursive;
 	text-align: center;
 	background-color: #88e2ca!important;
 	font-size: 20px;
@@ -204,7 +204,7 @@ h5 {
 		color:black!important;		
 	}
 	.btn {
-		font-family: 'Comfortaa', cursive;
+		font-family: 'Averia Serif Libre', cursive;
 		text-align: center;
 		background-color: #88e2ca!important;
 		font-size: 20px;
