--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,7 @@
 	padding: 0.5em;
 	font-size: 40px;
 }
-.colortitle {
-	font-family: 'Averia Serif Libre', cursive;
-	text-align: center;
-	float: center;
-	color:#ff8302;
-	padding: 0.5em;
-	font-size: 45px;
-	margin-top: 100px;
-}
+
 .subtext {
 	font-family: 'Comfortaa', cursive;
 	text-align: center;
@@ -103,6 +95,21 @@ h5 {
 	font-size: 20px;
 	background-color: white;
 	border: 5px solid #ff8302;
+	margin-left:150px;
+	margin-right:150px;
+	border-radius: 25px;
+	padding: 20px;
+	width: auto;
+	height: auto;
+}
+.the-container {
+	font-family: 'Averia Serif Libre', cursive;
+	color: white;
+	text-align: center;
+	float: center;
+	font-size: 40px;
+	background-color: #ff8302;
+	border: 5px solid white;
 	margin-left:150px;
 	margin-right:150px;
 	border-radius: 25px;
