--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,10 @@
 	font-size: 25px;
 }
 h3 {
-	font-family: 'Comfortaa', cursive;
-	text-align: center;
+	font-family: 'Averia Serif Libre', cursive!important;
+	text-align: center!important;
 	padding: 0.5em;
-	font-size: 20px;
+	font-size: 45px!important;
 }
 h4 {
 	float: center;
@@ -146,10 +146,10 @@ h5 {
 
 	}
 	h3 {
-		font-family: 'Comfortaa', cursive;
-		text-align: center;
+		font-family: 'Averia Serif Libre', cursive!important;
+		text-align: center!important;
 		padding: 0.5em;
-		font-size: 15px;
+		font-size: 25px!important;
 	}
 	h4 {
 		float: left;
@@ -230,6 +230,21 @@ h5 {
 		border-radius: 25px;
 		width: auto;
 		padding: 20px;
+		height: auto;
+	}
+	.the-container {
+		font-family: 'Averia Serif Libre', cursive;
+		color: white;
+		text-align: center;
+		float: center;
+		font-size: 25px;
+		background-color: #ff8302;
+		border: 5px solid white;
+		margin-left:150px;
+		margin-right:150px;
+		border-radius: 25px;
+		padding: 20px;
+		width: auto;
 		height: auto;
 	}
 }
