--- a/css/style.css
+++ b/css/style.css
@@ -251,3 +251,55 @@ h5 {
 #background {
 	background-color: #61c3be;
 }
+@media screen and (max-width: 500px) {
+	h3 {
+		font-family: 'Averia Serif Libre', cursive!important;
+		text-align: center!important;
+		padding: 0.5em;
+		font-size: 35px!important;
+	}
+	h4 {
+		float: left!important;
+		font-family: 'Comfortaa', cursive!important;
+		text-align: left!important;
+		padding: 0.5em;
+		font-size: 15px!important;
+	}
+	h5 {
+		float: left;
+		font-family: 'Averia Serif Libre', cursive!important;
+		text-align: left;
+		padding: 0.5em;
+		font-size: 20px!important;
+	}
+	.my-container {
+		font-family: 'Comfortaa', cursive;
+		color: black;
+		text-align: center;
+		font-size: 10px;
+		background-color: white;
+		border: 5px solid #ff8302;
+		margin-left:150px;
+		margin-right:150px;
+		border-radius: 25px;
+		padding: 20px;
+		width: auto;
+		height: auto;
+	}
+	.the-container {
+		font-family: 'Averia Serif Libre', cursive;
+		color: white;
+		text-align: center;
+		float: center;
+		font-size: 30px;
+		background-color: #ff8302;
+		border: 5px solid white;
+		margin-left:150px;
+		margin-right:150px;
+		border-radius: 25px;
+		padding: 20px;
+		width: auto;
+		height: auto;
+	}
+
+}
