--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ h5 {
 }
 .my-container {
 	font-family: 'Comfortaa', cursive;
-	color: black;
+	color: black!important;
 	text-align: center;
 	font-size: 20px;
 	background-color: white;
@@ -104,7 +104,7 @@ h5 {
 }
 .the-container {
 	font-family: 'Averia Serif Libre', cursive;
-	color: white;
+	color: white!important;
 	text-align: center;
 	float: center;
 	font-size: 40px;
